--- a/css/keshiastyle.css
+++ b/css/keshiastyle.css
@@ -15,10 +15,7 @@ header {
     padding: 10px;
     text-align: center;
 }
-.container {
-    flex: 1; /* Pushes footer to bottom */
-    padding-bottom: 20px; /* Creates separation */
-}
+
 
 /* Navbar */
 .navbar {
@@ -76,7 +73,8 @@ header {
     margin-top: 20px;
     border-radius: 10px;
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1); /* shadow effect */
-}
+  flex: 1; /* Pushes footer to bottom */
+    padding-bottom: 20px; /* Creates separation */}
 
 .container h2 {
     color: #4d3319; /* brown */
